<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".crear_usuario">

    <ImageView
        android:id="@+id/fotousuario"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/fotousuario"
        app:srcCompat="@drawable/usuario" />

    <EditText
        android:id="@+id/etnombre"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etapellido"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="-213dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etapellido"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="213dp"
        android:ems="10"
        android:hint="@string/apellido"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etcorreo"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="197dp"
        android:ems="10"
        android:hint="@string/correo"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etcontrasena"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="92dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/ettelefono"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etcorreo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-197dp"
        android:ems="10"
        android:hint="@string/telefono"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btncrearcuenta"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_alignStart="@+id/etnombre"
        android:layout_alignTop="@+id/btnmascota"
        android:layout_gravity="center_horizontal"
        android:text="@string/crear_cuenta" />

    <Button
        android:id="@+id/btnmascota"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_alignEnd="@+id/etnombre"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="33dp"
        android:text="@string/cuentamascota" />

    <Button
        android:id="@+id/btncargar"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="124dp"
        android:onClick="onclick"
        android:text="@string/cargarimagen" />

</RelativeLayout>